fix(Nav): 5 items alignment (#248)

--- a/src/components/structural/header/header-menu/header-menu.module.css
+++ b/src/components/structural/header/header-menu/header-menu.module.css
@@ -70,6 +70,22 @@
   }
 }
 
+.menuItems_aligned {
+  @media (--bp-lg) {
+    @mixin nested-grid-container;
+  }
+
+  .menuItem {
+    @media (--bp-lg) {
+      @mixin span 2, 10, lg;
+
+      .menuItemLinkWrapper {
+        padding-left: 0;
+      }
+    }
+  }
+}
+
 .menuItem {
   margin: 0;
   padding: 0;
